fixed camera button alignment

--- a/base.css
+++ b/base.css
@@ -94,14 +94,14 @@ h4, h5 {
 .camera-button {
     position: fixed;
     bottom: 160px;
-    right: 70%;
+    right: 71%;
     /*width: 50px;*/
     /*margin-left: -30px;*/
 }
 .messages-button {
     position: fixed;
     bottom: 160px;
-    left: 10%;
+    left: 11%;
     /*width: 50px;*/
     /*margin-left: -30px;*/
 }
